[package]
name = "rosalind"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dna"
path = "src/bin/dna.rs"
[[bin]]
name = "rna"
path = "src/bin/rna.rs"
[[bin]]
name = "fib"
path = "src/bin/fib.rs"
[[bin]]
name = "fibd"
path = "src/bin/fibd.rs"
[[bin]]
name = "revc"
path = "src/bin/revc.rs"
[[bin]]
name = "gc"
path = "src/bin/gc.rs"
[[bin]]
name = "hamm"
path = "src/bin/hamm.rs"
[[bin]]
name = "iprb"
path = "src/bin/iprb.rs"

[dependencies]
